# TDIP

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: installation.md  introduction.md  usage.md
examples/schleiz/: IP5_Terrameter.dip  Profile1-DD-4s-new-proc_corr.dip  schleiz1.ipynb
installation/: index.html
introduction/: index.html
search/: search_index.json
tdip/: __init__.py  decay.py  importtdipdata.py  modelling.py  tdip.py
usage/: index.html
